# RapidETL

./: LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-package.yml
data/: input.csv
data/output/: output.csv
examples/: sample_pipeline.json  test_pipeline.json
rapidetl/: cli.py  rapidetl.py
rapidetl/connectors/: csv_connector.py
rapidetl/dependencies/: json_utils.py  polars_utils.py  pydantic_utils.py
tests/: test_rapidetl.py
